syntax = "proto3";

package executor;

option go_package = "api/proto;executor";

// Request to append code to configuration
message AppendCodeRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
  string code = 3;     // The Terraform configuration code snippet
}

// Response to append code to configuration
message AppendCodeResponse {
  bool success = 1;     // Whether the code append operation was successful
  string error = 2;     // Error message, if any
}

// Request for Terraform Plan
message PlanRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response for Terraform Plan
message PlanResponse {
  bool success = 1;     // Whether the plan generation was successful
  string plan_output = 2; // The output of `terraform plan`
  string error = 3;     // Error message, if any
}

// Request for Terraform Apply
message ApplyRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
  string plan_file = 3; // Path to the saved Terraform plan file (optional)
}

// Response for Terraform Apply
message ApplyResponse {
  bool success = 1;     // Whether the apply operation was successful
  string apply_output = 2; // The output of `terraform apply`
  string error = 3;     // Error message, if any
}

// Request for Terraform Destroy
message DestroyRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response for Terraform Destroy
message DestroyResponse {
  bool success = 1;     // Whether the destroy operation was successful
  string destroy_output = 2; // The output of `terraform destroy`
  string error = 3;     // Error message, if any
}

// Request for Terraform state list
message GetStateListRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response for Terraform state list
message GetStateListResponse {
  bool success = 1;     // Whether the state list retrieval was successful
  string state_list_output = 2;     // The Terraform state file content
  string error = 3;     // Error message, if any
}

// Request to clear terraform code
message ClearCodeRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response to clear terraform code
message ClearCodeResponse {
  bool success = 1;     // Whether the clear operation was successful
  string error = 2;     // Error message, if any
}

// Request to create new project
message CreateProjectRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response to create new project
message CreateProjectResponse {
  bool success = 1;     // Whether the project creation was successful
  string error = 2;     // Error message, if any
}

// Request to delete project
message DeleteProjectRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response to delete project
message DeleteProjectResponse {
  bool success = 1;     // Whether the project deletion was successful
  string error = 2;     // Error message, if any
}

// Request to add providers to the Terraform configuration
message AddProvidersRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
  repeated Provider providers = 3; // List of providers to add

  message Provider {
    string name = 1; // Name of the provider
    string source = 2; // Source of the provider
    string version = 3; // Version of the provider
  }
}

// Response to add providers to the Terraform configuration
message AddProvidersResponse {
  bool success = 1;     // Whether the provider addition was successful
  string error = 2;     // Error message, if any
}

// Request to clear providers from the Terraform configuration
message ClearProvidersRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response to clear providers from the Terraform configuration
message ClearProvidersResponse {
  bool success = 1;     // Whether the provider clear operation was successful
  string error = 2;     // Error message, if any
}

// Request to add secret env variables to the Terraform configuration
message AddSecretEnvRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
  repeated Secret secrets = 3; // List of secrets to add

  message Secret {
    string name = 1;  // Name of the secret
    string value = 2; // Value of the secret
  }
}

// Response to add a secret to the Terraform configuration
message AddSecretEnvResponse {
  bool success = 1;     // Whether the secret addition was successful
  string error = 2;     // Error message, if any
}

// Request to clear secret env vars from the Terraform configuration
message ClearSecretEnvRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response to clear secret env vars from the Terraform configuration
message ClearSecretEnvResponse {
  bool success = 1;     // Whether the secret env vars clear operation was successful
  string error = 2;     // Error message, if any
}

// Request to add secret terraform variables to the Terraform configuration
message AddSecretVarRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
  repeated Secret secrets = 3; // List of secrets to add

  message Secret {
    string name = 1;  // Name of the secret
    string value = 2; // Value of the secret
  }
}

// Response to add a secret to the Terraform configuration
message AddSecretVarResponse {
  bool success = 1;     // Whether the secret addition was successful
  string error = 2;     // Error message, if any
}

// Request to clear secret vars from the Terraform configuration
message ClearSecretVarsRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response to clear secret vars from the Terraform configuration
message ClearSecretVarsResponse {
  bool success = 1;     // Whether the secret vars clear operation was successful
  string error = 2;     // Error message, if any
}

// Request to get main.tf content
message GetMainTfRequest {
  string user_id = 1;  // User identifier
  string project = 2;  // Name of the project
}

// Response with main.tf content
message GetMainTfResponse {
  bool success = 1;        // Whether the operation was successful
  string content = 2;      // Content of main.tf
  string error = 3;        // Error message, if any
}

// The Executor service definition.
service Executor {
  // Appends code to the Terraform configuration.
  rpc AppendCode(AppendCodeRequest) returns (AppendCodeResponse);

  // Generates a Terraform plan and returns the result.
  rpc Plan(PlanRequest) returns (PlanResponse);

  // Applies the Terraform plan and returns the execution result.
  rpc Apply(ApplyRequest) returns (ApplyResponse);

  // Destroys the Terraform-managed infrastructure and returns the result.
  rpc Destroy(DestroyRequest) returns (DestroyResponse);

  // Retrieves the Terraform state list.
  rpc GetStateList(GetStateListRequest) returns (GetStateListResponse);

  // Clears the Terraform files.
  rpc ClearCode(ClearCodeRequest) returns (ClearCodeResponse);

  // Creates a new project.
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);

  // Deletes a project.
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);

  // Adds providers to the Terraform configuration.
  rpc AddProviders(AddProvidersRequest) returns (AddProvidersResponse);

  // Clears the providers from the Terraform configuration.
  rpc ClearProviders(ClearProvidersRequest) returns (ClearProvidersResponse);

  // Adds a secret env to the Terraform configuration.
  rpc AddSecretEnv(AddSecretEnvRequest) returns (AddSecretEnvResponse);

  // Clears the secret env vars from the Terraform configuration.
  rpc ClearSecretEnv(ClearSecretEnvRequest) returns (ClearSecretEnvResponse);

  // Adds a secret variable to the Terraform configuration.
  rpc AddSecretVar(AddSecretVarRequest) returns (AddSecretVarResponse);

  // Clears the secret vars from the Terraform configuration.
  rpc ClearSecretVars(ClearSecretVarsRequest) returns (ClearSecretVarsResponse);

  // Gets the content of main.tf file
  rpc GetMainTf(GetMainTfRequest) returns (GetMainTfResponse);
}

// Health Check service definition
service Health {
  // Check returns the serving status of the server.
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  map<string, ServingStatus> components = 2;  // Add component status
  map<string, string> errors = 3;            // Add error messages for components
}
